# Huntress

./: .gitignore  AI_AGENT_LOOP_COMPLETE.md  AI_HUNT_EXECUTION_SYSTEM.md  AI_HUNT_SYSTEM_COMPLETE.md  APPROVAL_CALLBACK_RACE_FIX.md  APPROVAL_CALLBACK_RACE_FIX_V2.md  APPROVAL_CALLBACK_RACE_FIX_V4_FINAL.md  APPROVAL_CALLBACK_RACE_FIX_V5_FINAL.md  APPROVAL_CALLBACK_RACE_FIX_V6_HMR_FINAL.md  APPROVAL_GATE_FIX_COMPLETE.md  ARCHITECTURAL_FIXES_COMPLETE.md  AUDIT_TRACKER.md  AUTH_RESEARCH_AND_CONTINUATION.md  BUGFIX_BLANK_SCREEN.md  BUILD_PHASE_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTINUATION_PROMPT.md  CONTRIBUTING.md  DEEPER_AUTH_RESEARCH_AND_PLAN.md  DUPLICATE_DETECTION_COMPLETE.md  FILE_BASED_SCOPE_VALIDATION_FIX.md  FIX_DOCUMENT.md  GUIDELINES_FEATURE_COMPLETE.md  GUIDELINES_IMPORTER.md  H1_SUBMISSION_COMPLETE.md  HACKERONE_API_SETUP.md  HUNT_INTEGRATION_COMPLETE.md  INSTALL_DEPS.txt  LICENSE  LIVE_HUNT_ROADMAP.md  OAUTH_CREWAI_INTEGRATION.md  OAUTH_CREWAI_INTEGRATION_COMPLETE.md  OAUTH_HUNTER_ARCHITECTURE.md  OAUTH_HUNTER_SUMMARY.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_PHASES_4_5_COMPLETE.md  OAUTH_SETUP.md  OUTPUT_CAPTURE_FIX_COMPLETE.md  PHASE2_INTEGRATION.md  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: .env.example  ab_testing.json  axolotl_config.yml  deployment.json  htb_runner.json  learning_loop.json  model_versions.json  monitoring.json  production.json  training_config.json  validation.json  (+1 more)
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/docker/: Dockerfile  entrypoint.sh
src-tauri/src/: CLAUDE.md  agent_browser.rs  h1_api.rs  kill_switch.rs  lib.rs  main.rs  proxy_pool.rs  pty_manager.rs  safe_to_test.rs  sandbox.rs  secure_storage.rs  tool_checker.rs
(+380 files in other folders)
