[package]
name = "huntress"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "huntress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
base64 = "0.22"
ctrlc = "3.4"
hostname = "0.4"
dirs = "5"
ring = "0.17"
bollard = { version = "0.18", features = ["ssl"] }
futures-util = "0.3"
tar = "0.4"
bytes = "1"
sysinfo = "0.33"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
# `filetime` is used by prune_recordings tests to age-backdate test fixtures.
# Already present transitively via `tar`; declaring explicitly for test builds.
filetime = "0.2"

